--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.20.6",
     "ai": "^3.0.24",
     "next": "14.2.2",
     "openai": "^4.38.2",
